# inferno

./: .gitignore  README.md  dune-project  inferno.opam  test_faulty_samples  test_samples
faulty_samples/: either-1.ifro  either-2.ifro  polymorphism-1.ifro  polymorphism-2.ifro  tree-1.ifro  tree-2.ifro  tree-3.ifro  tree-4.ifro
lib/: core.ml  definitions.ml  definitions.mli  dune  expression.ml  expression.mli  inference.ml  inference.mli  interpreter.ml  interpreter.mli  lexer.mll  parser.mly  typeEnv.ml  typeEnv.mli  typeEnvironment.ml  typeEnvironment.mli  util.ml
samples/: core.ifro+  double.ifro  either.ifro  foldable.ifro  functor.ifro  list.ifro  option.ifro  or.ifro  pair  pair.ifro  parsing.ifro  tree.ifro
samples/faulty/: or-1.ifro  or-2.ifro  polymorphism-1.ifro  polymorphism-2.ifro  polymorphism-3.ifro  polymorphism-4.ifro  tree-1.ifro  tree-2.ifro  tree-3.ifro  tree-4.ifro  tree-5.ifro
