opam-version: "2.0"
name: "inferno"
version: "~dev"
synopsis: "Type inference algorithm"
maintainer: "Vlad Lopalo"
authors: "Vlad Lopalo"
depends: [
  "dune" {>= "1.11.4"}
  "ocaml-base-compiler" {= "4.10.0"}

  "menhir" {= "20200624"}
  "fmt" {= "0.8.8"}

  "merlin" {>= "3.3.2"}
  "ocamlformat" {>= "0.11.0"}
  "utop" {>= "2.4.2"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
